Updated Русская версия (markdown)

--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -1,6 +1,5 @@
 Здесь будут переводы TShok'a на русский язык.
 
-### [[Commands-(Русская-версия)]]
-https://github.com/TShock/TShock/wiki/Commands-(%D0%A0%D1%83%D1%81%D1%81%D0%BA%D0%B0%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F)
+### [[Commands (Русская версия)]]
 
 Идея перевода: http://Terraria.Su
