Updated Русская версия (markdown)

--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -1,5 +1,7 @@
 Здесь будут переводы TShok'a на русский язык.
 
-### [[Commands (Русская версия)]]
+
+### [[Команды]]
+
 
 Идея перевода: http://Terraria.Su
