Updated Русская версия (markdown)

--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -1,7 +1,13 @@
 Здесь будут переводы TShok'a на русский язык.
 
-
-### [[Команды]]
-
+### [[Установка]] (перевод не начат)
+### [[Команды]] (перевод оригинала закончен)
+### [[MOTD документация]] (перевод не начат)
+### [[Настройка конфигурационного файла]] (перевод не начат)
+### [[Список NPC]]
+### [[Список вещей]]
+### [[Права доступа]]
+### [[Помощь проекту TShok]]
+### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]]
 
 Идея перевода: http://Terraria.Su
