Updated Русская версия (markdown)

--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -4,10 +4,10 @@
 ### [[Команды]] (перевод оригинала закончен)
 ### [[MOTD документация]] (перевод не начат)
 ### [[Настройка конфигурационного файла]] (перевод не начат)
-### [[Список NPC]]
-### [[Список вещей]]
-### [[Права доступа]]
-### [[Помощь проекту TShok]]
-### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]]
+### [[Список NPC]] (перевод не начат)
+### [[Список вещей]] (перевод не начат)
+### [[Права доступа]] (перевод не начат)
+### [[Помощь проекту TShok]] (перевод не начат)
+### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]] (перевод не начат)
 
 Идея перевода: http://Terraria.Su
