Updated Русская версия (markdown)

--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -7,7 +7,7 @@
 ### [[Список NPC]] (перевод не начат)
 ### [[Список вещей]] (перевод не начат)
 ### [[Права доступа]] (перевод не начат)
-### [[Помощь проекту TShok]] (перевод не начат)
+### [[Помощь проекту TShok]] (оригинала закончен)
 ### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]] (перевод не начат)
 
 Идея перевода: http://Terraria.Su
