--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -1,13 +1,13 @@
 Здесь будут переводы TShok'a на русский язык.
 
-### [[Установка]] (перевод не начат)
-### [[Команды]] (перевод оригинала закончен)
-### [[MOTD документация]] (перевод не начат)
-### [[Настройка конфигурационного файла]] (перевод не начат)
-### [[Список NPC]] (перевод не начат)
-### [[Список вещей]] (перевод не начат)
-### [[Права доступа]] (перевод не начат)
-### [[Помощь проекту TShok]] (перевод оригинала закончен)
-### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]] (перевод не начат)
+### [[Установка]]
+### [[Команды]]
+### [[MOTD документация]]
+### [[Настройка конфигурационного файла]]
+### [[Список NPC]]
+### [[Список вещей]]
+### [[Права доступа]]
+### [[Помощь проекту TShok]]
+### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]]
 
 Идея перевода: http://Terraria.Su
