Updated Установка (markdown)

--- a/Установка.md
+++ b/Установка.md
@@ -19,7 +19,7 @@
 3. После выбора мира, вам будет предложена 3 настройки: Max players(макс.количество игроков), Server port(Порт сервера) и Server password(Пароль сервера).
  * _Примечание: Стандартные настройки: Макс.количество игроков (8), Порт сервера (7777), и Пароль сервера (нету). Вы можете нажимать ENTER(Ввод) что бы выбрать стандартные параметры в скобках ()
 4. В первый запуск сервера, в консоле появится сообщение: **To become superadmin, join the game and type /auth [код индификации]**
-5. Запустите Terraria.exe, зайдите на свой сервер, и введите: **/auth [код индификации] (без скобок!!)**. Это даст вам право на создание Аккаунта на сервере, и даст право на все команды. 
+5. Запустите Terraria.exe, зайдите на свой сервер, и введите: **/auth [код идентификации ] без скобок!**. Это даст вам право на создание Аккаунта на сервере, и даст право на все команды. 
  * _Примечание: Что бы присоединится к своему серверу, вы можете ввести: **localhost** или **127.0.0.1** (они несут одинаковый смысл - если же сервер запущен на той же машине на какой и террариа), или введите свой IP адресс, узнать его можно легко пройдя по этой ссылке [2ip.ru](http://www.2ip.ru/)._
 6. Дальше, введите: **/user add [ник]:[пароль] superadmin** (без скобок!)
  * Пример: **/user add ARTdrakon:TShock superadmin** (Не забудьте двоеточие "**:**" между ником и паролем)
