Updated Русская версия (markdown)

--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -6,6 +6,7 @@
 ### [[Настройка конфигурационного файла]]
 ### [[Список NPC]]
 ### [[Список вещей]]
+### [[Список "баффов"]]
 ### [[Права доступа]]
 ### [[Помощь проекту TShok]]
 ### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]]
