Updated Список "баффов" (markdown)

--- a/Список-"баффов".md
+++ b/Список-"баффов".md
@@ -24,7 +24,7 @@
 20. Отравлен (Медленно отнимаются HP, из-за отравления)
 21. Эффект после применения лечебных зелий (Нельзя использовать любые предметы лечения)
 22. Темнота (Уменьшает силу подсветки в темных местах)
-23. Оглушен (Нельзя использовать ни какие предметы)
+23. Оглушен (Нельзя использовать какие-либо предметы)
 24. Подожжен (Медленно отнимаются HP, из-за огня)
 25. Похмелье (+4 урона в ближнем бою , -4 защиты)
 26. Хорошая еда (Небольшое увеличение всех статистик)
