Updated Список "баффов" (markdown)

--- a/Список-"баффов".md
+++ b/Список-"баффов".md
@@ -28,3 +28,6 @@
 24. Подожжен (Медленно отнимаются HP, из-за огня)
 25. Похмелье (+4 урона в ближнем бою , -4 защиты)
 26. Хорошая еда (Небольшое увеличение всех статистик)
+
+   Перевод статьи: RuslanTerraria (TEK)
+   Для сайта : Terrariarussia.ru
