Updated Русская версия (markdown)

--- a/Русская-версия.md
+++ b/Русская-версия.md
@@ -8,7 +8,7 @@
 ### [[Список вещей]]
 ### [[Список "баффов"]]
 ### [[Права доступа]]
-### [[Помощь проекту TShok]]
+### [[Помощь проекту TShock]]
 ### [[Файлы Users.txt, Whitelist.txt, itembans.txt, bans.txt]]
 
 Идея перевода: http://Terraria.Su
